refactor: 삭제된 게시글/댓글 조회할때 Optional.empty()를 반환 * 소프트 삭제 반영해서 서비스 수정 -> Optional.empty()를 반환 * 테스트 코드에서 필요